--- a/webapps/Dockerfile
+++ b/webapps/Dockerfile
@@ -10,6 +10,7 @@ RUN pip install Django==3.1.2 \
 
 RUN mkdir /code
 WORKDIR /code
+COPY ./webapps /code
 
 COPY ./webapps/docker-entrypoint.sh /usr/local/bin/
 ENTRYPOINT ["bash", "docker-entrypoint.sh"]
